# symdiff

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  README.md
bench/: BenchDummy.cpp  BenchTimer.h  CMakeLists.txt
cmake/: genrev.cmake
csymdiff/: symdiff.c
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  example1.cpp  example2.cpp  pattern.cpp
java/symdiff/: Builder.java  Derivative.java  FullEval.java  MainTest.java  PartialEval.java  PrettyPrint.java  Symdiff.java  Visitor.java
java/tests/: Tests.java
py/: Expression.py  __init__.py  solve.py
src/: Builder.h  CMakeLists.txt  Context.cpp  Context.h  DeepCopy.h  Derivate.h  Equiv.h  FreeVariables.h  FullEval.h  FullEval.h.orig  LLVM.h  LLVMGen.h  Nodes.cpp  Nodes.def  Nodes.h  Nodes.h.orig  PartialEval.h  Patterns.h  Patterns.h.orig  PrettyPrint.h  RegisterVM.h  StackVM.h  Substitution.h  Sym.cpp  Sym.h  config.h  expression.cpp  expression.h  main.cpp  operators.cpp  operators.h  optimizer.h  smath.h  stackgenerator.h  sym.cpp  sym.h  variables.h  version.h.in.cmake  window.cpp
src/internal/: AbstractExpression.cpp  AbstractExpression.h  Builder.h  Context.cpp  Context.h  Definitions.cpp  Definitions.h  Errors.h  Nodes.def  Nodes.h  Pattern.cpp  Pattern.h  Placeholder.cpp  Placeholder.h  Scalar.cpp  Scalar.h  Type.h  Utils.cpp  Utils.h  Visitor.h  VisitorDerivate.h  VisitorFullEval.h  VisitorPartialEval.h
tests/: CMakeLists.txt  add_test.cpp  add_test.h  equiv_test.cpp  equiv_test.h  exp_test.cpp  exp_test.h  gtest_main.cpp  inverse_test.cpp  inverse_test.h  ln_test.cpp  ln_test.h  mult_test.cpp  mult_test.h  opposite_test.cpp  opposite_test.h  pow_test.cpp  pow_test.h
